# mlnorm

./: .gitignore  Cargo.toml  NOTICE  README.md  REFERENCES.md
.github/workflows/: ci.yml
bindings/: Cargo.toml  README.md  mlnorm.pyi  mlnormalize.pyi  pyproject.toml
bindings/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: idempotent.rs  normalize_no_panic.rs  stripped_key.rs
src/: lib.rs  normalize.rs  version.rs
src/transforms/: archaic.rs  digits.rs  mod.rs  mojibake.rs  punct.rs  spoof.rs
tests/: golden.rs  invariants.proptest-regressions  invariants.rs
tests/golden/: cases.json
